--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## Database config
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url               = jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_USERNAME}
+spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
+spring.datasource.url               = jdbc:mariadb://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 spring.datasource.username          = ${DATABASE_USERNAME}
 spring.datasource.password          = ${DATABASE_PASSWORD}
 
 ## JPA config
-spring.jpa.properties.hibernate.dialect     = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect     = org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto               = create-drop
 spring.jpa.show-sql                         = true
 spring.jpa.properties.hibernate.format_sql  = true
